--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "mckenziearts/laravel-notify": "^2.4",
         "mpdf/mpdf": "^6.1"
     },
     "require-dev": {
