--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,17 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.1",
-        "guzzlehttp/guzzle": "^7.2",
+        "geocoder-php/nominatim-provider": "^5.7",
+        "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "mckenziearts/laravel-notify": "^2.4",
-        "mpdf/mpdf": "^6.1"
+        "mpdf/mpdf": "^6.1",
+        "nyholm/psr7": "^1.8",
+        "php-http/curl-client": "^2.3",
+        "php-http/guzzle7-adapter": "^1.0",
+        "stevebauman/location": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
